fix: 完善军情与战报标准化
